# sagepick.ai_service

./: .gitignore  README.md  pyproject.toml
Collaborative_Filering/: user_based.ipynb
app/: main.py
app/api/: api.py  deps.py
app/api/endpoints/: recommendations.py
app/core/: llm_search.py  recommender.py  scheduler.py  settings.py
inference/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
inference/app/: config.py  main.py
inference/app/agent/: __init__.py  answer_agent.py  assessor.py  graph.py  models.py  research_agent.py
inference/app/api/: routes.py
inference/app/models/: agent_schemas.py  schemas.py
inference/app/services/: embeddings_service.py  model_manager.py  qdrant_client.py  recommender.py  s3_client.py  vector_sync_service.py  wandb_client.py
inference/app/tools/: __init__.py  tavily_tool.py  vector_tool.py
inference/nginx/: inference_api.conf  nginx.conf
notebooks/: matrix_factorization.ipynb
train/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  upload_to_s3.py
train/app/: config.py  main.py
train/app/api/: routes.py
train/app/models/: matrix_factorization.py  user_collaborative.py
train/app/services/: s3_client.py  trainer.py  wandb_client.py
