[project]
name = "sagepick-ai"
version = "0.1.0"
authors = [
    { name = "Sai Rohith", email = "sairohithgalam1@gmail.com" },
    { name = "Geetheswar V", email = "geetheswar.edu@gmail.com" },
    { name = "Sai Teja", email = "saitejavelpula.nss@gmail.com" }
]
description = "AI services for SagePick Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "uvicorn[standard]>=0.38.0",
]
