[project]
name = "sagepick-ai"
version = "0.1.0"
authors = [
    { name = "Sai Rohith", email = "sairohithgalam1@gmail.com" },
    { name = "Geetheswar V", email = "geetheswar.edu@gmail.com" },
    { name = "Sai Teja", email = "saitejavelpula.nss@gmail.com" }
]
description = "AI services for SagePick Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "uvicorn[standard]>=0.38.0",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "wandb>=0.18.6",
    "boto3>=1.34.138",
    "APScheduler>=3.10.4",
    "joblib>=1.4.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.11.4",
]
