[project]
name = "train-service"
version = "0.1.0"
description = "Training service for SagePick recommendation models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.11.0",
    "wandb>=0.18.0",
    "boto3>=1.34.0",
    "joblib>=1.4.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
]
